# github-runner-operator

./: .copier-answers.yml  .copilot-collections.yaml  .custom_wordlist.txt  .dockerignore  .flake8  .gitignore  .jujuignore  .licenserc.yaml  .lycheeignore  .pylintrc  .vale.ini  .woke.yaml  2  :w  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  Makefile.docs  README.md  SECURITY.md  actions.yaml  base_requirements.txt  build.sh  charmcraft.yaml  checksums  checksums_hashes_order  config.yaml  daemon.json  enable_fips.sh  generate-src-docs.sh  go.mod  go.sum  index.html  install_6_14.sh  is  metadata.yaml  openapi-generate-jobmanager.sh  openapi.yaml  (+14 more)
.github/: .jira_sync_config.yaml  pull_request_template.md
1550/: index.html
1563/: index.html
1571/: index.html
1592/: index.html
1593/: index.html
1603/: index.html
1605/: index.html
1606/: index.html
1609/: index.html
1610/: index.html
1612/: index.html
1613/: index.html
1614/: index.html
1618/: index.html
1622/: index.html
1624/: index.html
1626/: index.html
1627/: index.html
1628/: index.html
1634/: index.html
1635/: index.html
1642/: index.html
1651/: index.html
1662/: index.html
1663/: index.html
1665/: index.html
1666/: index.html
1667/: index.html
1670/: index.html
1671/: index.html
1674/: index.html
1675/: index.html
1676/: index.html
1677/: index.html
1678/: index.html
1679/: index.html
1680/: index.html
1681/: index.html
github-runner-manager/: .licenserc.yaml  .woke.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt  tox.ini
github-runner-manager/src/: cli.py  cli_config.py
github-runner-manager/src-docs/: cli.py.md  cli_config.py.md  errors.md  github_client.md  manager.cloud_runner_manager.md  manager.github_runner_manager.md  manager.md  manager.runner_manager.md  manager.runner_scaler.md  metrics.events.md  metrics.github.md  metrics.md  metrics.runner.md  metrics.runner_logs.md  metrics.storage.md  metrics.type.md  openstack_cloud.constants.md  openstack_cloud.health_checks.md  openstack_cloud.md  openstack_cloud.openstack_cloud.md  openstack_cloud.openstack_runner_manager.md  reactive.consumer.md  reactive.md  reactive.process_manager.md  reactive.runner.md  reactive.runner_manager.md  reactive.types_.md  repo_policy_compliance_client.md  types_.github.md  types_.md  utilities.md
github-runner-manager/src/github_runner_manager/: __init__.py  cli.py  cli_config.py  constants.py  errors.py  github_client.py  http_server.py  http_util.py  jobmanager_api.py  planner_client.py  reconcile_service.py  repo_policy_compliance_client.py  thread_manager.py  utilities.py
github-runner-manager/src/github_runner_manager/cloud/: openstack.py
github-runner-manager/src/github_runner_manager/cloudrunner/: cloudrunner.py
github-runner-manager/src/github_runner_manager/configuration/: __init__.py  base.py  github.py  jobmanager.py
github-runner-manager/src/github_runner_manager/manager/: __init__.py  cloud_runner_manager.py  github_runner_manager.py  models.py  pressure_reconciler.py  reconciler.py  runner_manager.py  runner_scaler.py  vm_manager.py
github-runner-manager/src/github_runner_manager/metrics/: __init__.py  events.py  github.py  github_api.py  labels.py  metrics.py  reconcile.py  runner.py  runner_logs.py  storage.py  type.py  utils.py
github-runner-manager/src/github_runner_manager/openstack_cloud/: __init__.py  configuration.py  constants.py  health_checks.py  models.py  openstack_cloud.py  openstack_runner_manager.py
github-runner-manager/src/github_runner_manager/platform/: __init__.py  factory.py  github_provider.py  jobmanager_provider.py  multiplexer_provider.py  multiplexor_provider.py  platform_provider.py
github-runner-manager/src/github_runner_manager/reactive/: __init__.py  consumer.py  process_manager.py  runner.py  runner_manager.py  types_.py
github-runner-manager/src/github_runner_manager/templates/: env.j2  openstack-userdata.sh.j2  pre-job.j2
github-runner-manager/src/github_runner_manager/types_/: __init__.py  github.py
github-runner-manager/tests/: conftest.py
github-runner-manager/tests/data/workflows/: branch_protection_rule.json  create.json  delete.json  discussion.json  discussion_comment.json  gollum.json  issue_comment.json  issues.json  label.json  pull_request.json  pull_request_review.json  push.json  release.json  workflow_dispatch.json  workflow_run.json
github-runner-manager/tests/integration/: application.py  conftest.py  factories.py  github_helpers.py  helper.py  metrics_helpers.py  openstack_helpers.py  planner_stub.py  test_charm.py  test_cli.py  test_debug_ssh.py  test_external_contributor_security.py  test_github_app_auth.py  test_metrics.py  test_planner_runner.py  test_reactive.py
github-runner-manager/tests/unit/: conftest.py  fake_runner_managers.py  mock_runner_managers.py  requirements.txt  test_cli_config.py  test_cli_paths.py  test_config.py  test_github_client.py  test_http_server.py  test_integration_factories.py  test_jobmanager_api.py  test_jobmanager_client.py  test_planner_client.py  test_pre_job_script.py  test_pressure_reconciler.py  test_runner_scaler.py  test_thread_manager.py  test_types_.py  test_utilities.py
github-runner-manager/tests/unit/factories/: metrics_factory.py  openstack_factory.py  runner_instance_factory.py
github-runner-manager/tests/unit/manager/: test_models.py  test_pressure_reconciler.py  test_runner_manager.py
github-runner-manager/tests/unit/metrics/: test_events.py  test_github.py  test_github_api.py  test_runner.py  test_runner_logs.py  test_storage.py  test_utils.py
github-runner-manager/tests/unit/openstack_cloud/: __init__.py  test_health_checks.py  test_openstack_cloud.py  test_openstack_runner_manager.py
github-runner-manager/tests/unit/platform/: test_factory.py  test_github_provider.py  test_jobmanager_provider.py  test_multiplexer_provider.py
github-runner-manager/tests/unit/reactive/: test_consumer.py  test_process_manager.py  test_runner_manager.py
(+52667 files in other folders)
